# centralized-exchange

./: .dockerignore  .env.example  Cargo.toml  DOCKER_SETUP.md  Dockerfile  README.md  docker-compose.yml  dump.rdb
.github/workflows/: ci.yml  pr-checks.yml  pr-template.yml
docs/: API.md  ARCHITECTURE.md  DATA_MODELS.md  DEPLOYMENT.md  TESTING.md  WEBSOCKET.md
entity/: Cargo.toml
entity/src/: bets.rs  event_options.rs  events.rs  mod.rs  orders.rs  prelude.rs  trades.rs  transaction.rs  user_positions.rs  users.rs
migration/src/: lib.rs  m20240101_000000_create_users_table.rs  m20250109_100000_create_orders_table.rs  m20250109_110000_create_trades_table.rs  m20250109_120000_create_user_positions_table.rs  m20250707_223909_transactions.rs  m20250708_130208_events.rs  m20250708_150357_event_options.rs  m20250708_180522_bets.rs  m20250709_000000_add_user_role.rs
postman/: automated-testing-summary.md  centralized-exchange-automated.postman_collection.json  centralized-exchange.postman_collection.json  centralized-exchange.postman_environment.json  postman-users-export-import.js  test-users-data.csv
src/: main.rs
src/constants/: config.rs
src/handlers/: auth_handler.rs  bet_handler.rs  event_handler.rs  event_option_handler.rs  event_settlement_handler.rs  health.rs  mod.rs  order_book_handler.rs  portfolio_handler.rs  position_handler.rs  transaction_handler.rs  user_handler.rs
src/middleware/: auth.rs
src/order_book/: db_persistence.rs  engine.rs  market_maker.rs  mod.rs  position_tracker.rs  price_updater.rs  redis_persistence.rs  types.rs
(+33 files in other folders)
