[package]
name = "centralized-exchange"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration"}
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.31"
rust_decimal = "1.32"
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = "0.15"
actix-web-actors = "4.2"
actix = "0.13"
futures = "0.3"
lazy_static = "1.4"
